# voice-assistant

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml
docs/: VIETNAMESE_ASR_RESEARCH.md  advanced-tts-setup.md  environment-architecture.md  installation-guide.md  post-mortem-editdistance-windows.md  tts-benchmark-results.md  tts-usage.md  vad-usage.md  vietneu-tts-benchmark-guide.md  vietneu-tts-benchmark-results.md  vietneu-tts-lmdeploy-results.md  voice-pipeline.md
dummy_editdistance/: pyproject.toml
dummy_editdistance/editdistance.egg-info/: PKG-INFO  SOURCES.txt
plans/: phase-1-summary.md
stt_test/: __init__.py  __main__.py  batch_benchmark.py  benchmark.py  cli.py  env_manager.py  registry.py
stt_test/scripts/: convert_parakeet_to_mlx.py  download_vivos.py  run_gipformer.py  run_moonshine.py  run_parakeet.py  run_parakeet_mac.py  run_qwen3_asr.py  run_sensevoice.py  run_whisper_mac.py  run_whisper_turbo.py
tts_test/: __init__.py  __main__.py  audio_quality.py  batch_benchmark.py  benchmark.py  benchmark_vietneu.py  benchmark_vietneu_all.py  cli.py  env_manager.py  registry.py
tts_test/scripts/: run_gpt_sovits.py  run_vietneu_tts.py  run_vietts.py  run_vits_vi.py  run_xtts.py
vad_test/: __init__.py  __main__.py  cli.py  env_manager.py  registry.py  streaming.py  utils.py
vad_test/scripts/: run_silero_vad.py
voice_assistant/: __init__.py  __main__.py  audio.py  cli.py  config.py  pipeline.py  setup.py  state.py
voice_assistant/asr/: __init__.py
voice_assistant/llm/: __init__.py
voice_assistant/tools/: __init__.py
(+24 files in other folders)
