[project]
name = "voice-assistant"
version = "0.2.0"
description = "CLI tool for benchmarking Vietnamese ASR and TTS models"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
]

[project.scripts]
stt-test = "stt_test.cli:app"
tts-test = "tts_test.cli:app"
vad-test = "vad_test.cli:app"
