[project]
name = "voice-assistant"
version = "0.3.0"
description = "CLI tool for benchmarking Vietnamese ASR and TTS models + Voice Assistant pipeline"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "numpy>=1.20.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
voice = [
    "llama-cpp-python>=0.2.50",
    "pyaudio>=0.2.13",
    "sounddevice>=0.4.6",
    "huggingface_hub>=0.20.0",
    "silero-vad>=0.4.0",
    "sherpa-onnx>=1.10.0",
    "vieneu>=0.1.0",
]
tui = [
    "textual>=0.50.0",
]
vision = [
    "opencv-python>=4.9.0",
    "pillow>=10.0.0",
]
all = [
    "voice-assistant[voice,tui,vision]",
]

[project.scripts]
stt-test = "stt_test.cli:app"
tts-test = "tts_test.cli:app"
vad-test = "vad_test.cli:app"
voice-assistant = "voice_assistant.cli:app"
rcli = "voice_assistant.cli:app"
